--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^3.3.1
+  flutter_svg: ^0.15.0
+  share: ^0.6.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +47,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -70,3 +75,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: SkolaSans
+      fonts:
+        - asset: assets/fonts/SkolaSans-Black.otf
+        - asset: assets/fonts/SkolaSans-BlackItalic.otf
+        - asset: assets/fonts/SkolaSans-Bold.otf
+        - asset: assets/fonts/SkolaSans-BoldItalic.otf
+        - asset: assets/fonts/SkolaSans-Light.otf
+        - asset: assets/fonts/SkolaSans-LightItalic.otf
+        - asset: assets/fonts/SkolaSans-Medium.otf
+        - asset: assets/fonts/SkolaSans-MediumItalic.otf
+        - asset: assets/fonts/SkolaSans-Regular.otf
+        - asset: assets/fonts/SkolaSans-RegularItalic.otf
