--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_secure_storage: ^3.3.1
-  flutter_svg: ^0.15.0
-  share: ^0.6.3
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
+  flutter_secure_storage: ^3.3.1
+  flutter_svg: ^0.15.0
+  share: ^0.6.3
+  charts_flutter: ^0.8.1
 
 dev_dependencies:
   flutter_test:
