--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   http: ^0.12.0
   share: ^0.6.3
   charts_flutter: ^0.8.1
+  json_annotation: ^3.0.0
   openapi:
     path:
       'swagger'
@@ -35,6 +36,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
+  json_serializable: ^3.2.5
 
 
 # For information on the generic Dart part of this file, see the
