--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   share: ^0.6.3
   charts_flutter: ^0.8.1
   json_annotation: ^3.0.0
+  url_launcher: ^5.4.1
   openapi:
     path:
       'swagger'
@@ -38,7 +39,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.0.0
   json_serializable: ^3.2.5
-
+  flutter_launcher_icons: ^0.7.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -96,3 +97,8 @@ flutter:
         - asset: assets/fonts/SkolaSans-MediumItalic.otf
         - asset: assets/fonts/SkolaSans-Regular.otf
         - asset: assets/fonts/SkolaSans-RegularItalic.otf
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo1024.png"
