--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,34 +12,35 @@ description: A new Flutter project.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.2+1
+publish_to: none
 
 environment:
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.2
 
-  flutter_secure_storage: ^3.3.1
-  flutter_svg: ^0.15.0
-  http: ^0.12.0
-  share: ^0.6.3
-  charts_flutter: ^0.8.1
-  json_annotation: ^3.0.0
-  url_launcher: ^5.4.1
+  flutter_secure_storage: ^4.1.0
+  flutter_svg: ^0.21.0-nullsafety.0
+  http: ^0.13.0
+  share: ^2.0.0
+  charts_flutter: ^0.10.0
+  json_annotation: ^4.0.0
+  url_launcher: ^6.0.0
+  intl: ^0.17.0
   openapi:
-    path:
-      'swagger'
+    path: 'swagger'
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.0.0
-  json_serializable: ^3.2.5
-  flutter_launcher_icons: ^0.7.4
+  build_runner: ^1.12.0
+  json_serializable: ^4.1.0
+  flutter_launcher_icons: ^0.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
